<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_padding"
    android:layout_marginVertical="@dimen/half_padding"
    app:strokeWidth="1dp"
    app:strokeColor="@color/stroke_colour"
    app:cardElevation="0dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txt_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/half_padding"
            android:paddingVertical="@dimen/default_padding"
            android:textStyle="bold"
            android:text="@string/unassigned_title"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_appicon"
            app:layout_constraintBottom_toTopOf="@id/btn_assign_app"
            />
        <TextView
            android:id="@+id/txt_packagename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/half_padding"
            android:paddingBottom="@dimen/default_padding"
            android:textSize="12sp"
            android:text="@string/unassigned_subtitle"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/txt_appname"
            app:layout_constraintBaseline_toBaselineOf="@id/txt_appname"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <ImageView
            android:id="@+id/img_appicon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/default_padding"
            android:importantForAccessibility="no"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/gray"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_appname"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/clear"
            android:textColor="@color/primary_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_assign_app"
            style="?attr/borderlessButtonStyle"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_assign_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/assign"
            android:textColor="@color/primary_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
