<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="false"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:elevation="@dimen/default_elevation"
        android:background="@drawable/bg_bottomsheet"
        >
        <ImageView
            android:id="@+id/img_monoicon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_padding"
            android:padding="@dimen/default_padding"
            android:importantForAccessibility="no"
            android:background="@color/gray"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.4"
            tools:src="@drawable/ic_launcher_foreground"
            />
        <TextView
            android:id="@+id/lbl_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@string/threshold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_monoicon"
            app:layout_constraintBottom_toTopOf="@id/btn_save_icon"
            />
        <CheckBox
            android:id="@+id/chkbox_invert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@string/invert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_monoicon"
            app:layout_constraintBottom_toTopOf="@id/btn_save_icon"
            />
        <com.google.android.material.slider.Slider
            android:id="@+id/slider_threshold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="255"
            android:stepSize="1"
            app:tickVisible="false"
            app:layout_constraintStart_toEndOf="@id/lbl_threshold"
            app:layout_constraintEnd_toStartOf="@id/chkbox_invert"
            app:layout_constraintTop_toBottomOf="@id/img_monoicon"
            app:layout_constraintBottom_toTopOf="@id/btn_save_icon"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save_icon"
            style="?attr/borderlessButtonStyle"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
